--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,3 +5,7 @@ spring:
     active: dev
   config:
     import: optional:file:.env[.properties]
+
+  web:
+    resources:
+      add-mappings: false # 정적 리소스 매핑 비활성화 (NoHandlerFoundException 발생을 위함)
