--- a/src/main/resources/application-core.yml
+++ b/src/main/resources/application-core.yml
@@ -2,3 +2,16 @@ server:
   port: 8080
   error:
     include-message: always
+
+spring:
+  security:
+    oauth2:
+      client:
+        registration:
+          google:
+            client-id: ${GOOGLE_CLIENT_ID}
+            client-secret: ${GOOGLE_SECRET_KEY}
+            scope:
+              - email
+              - profile
+            redirect-uri: "https://8f98-115-90-99-121.ngrok-free.app/login/oauth2/code/google"
