feat : 용량 제한 설정 및 기본 배경 설정 추가

--- a/src/main/resources/application-core.yml
+++ b/src/main/resources/application-core.yml
@@ -14,4 +14,7 @@ spring:
             scope:
               - email
               - profile
-            redirect-uri: "https://8f98-115-90-99-121.ngrok-free.app/login/oauth2/code/google"
+            redirect-uri: "https://4abc-115-90-99-121.ngrok-free.app/login/oauth2/code/google"
+  servlet:
+    multipart:
+      max-file-size: 5MB
